class_name MapControl
extends Control

@export var office_button: Button


func lab_btn_pressed() -> void:
	# TODO - check if unlocked? if not, return. Else, continue
	
	#AreaChange.change
	return

func room_btn_pressed() -> void:
	return

func greenhouse_btn_pressed() -> void:
	return

func construction_site_btn_pressed() -> void:
	return

func dungeon_btn_pressed() -> void:
	return

func close_map_btn_pressed() -> void:
	queue_free()
	return
